# over-intra-news

./: .env.example  .gitignore  README.md  ci-constraints.txt  pyproject.toml
.github/workflows/: ci.yml
aws/ccnews_sampler/: calendar_utils.py  data_maps.py  extract_sample.py  monthly_uniform_sampling.py  quota.py  reservoir_sampling.py  run_data.py  run_logger.py
aws/scripts/: news_queue.sh  s3_utils.sh  validation.sh
docs/: formatting.md
docs/aws_parquet_schemas/: news_corpus_schema.md  sample_metadata_schema.md
docs/lda_output_schemas/: lda_inference_doc_topics_schema.md  lda_topic_keys_schema.md  lda_topic_word_weights_schema.md  lda_training_doc_topics_schema.md
infra/logging/: infra_logger.py
infra/seeds/: seed_snp_memberships.py  seed_trading_calendar.py
infra/seeds/seed_firm_characteristics/: seed_firm_characteristics.py
infra/seeds/seed_firm_characteristics/edgar_search/: edgar_filing_parse.py  edgar_search_core.py  edgar_search_utils.py
infra/seeds/seed_firm_characteristics/loading/: load_tables.py  load_tables_utils.py
infra/seeds/seed_firm_characteristics/records/: raw_record.py  table_records.py
infra/seeds/seed_firm_characteristics/scoring/: confidence_scores.py  scoring_utils.py
infra/utils/: db_utils.py  requests_utils.py
ingest/: seed_trading_calendar.py  snp_memberships.py
local_data/: symbol_aliases.csv
notebooks/data_notebooks/: README.md  adjudication_multi_candidate.ipynb  entity_resolution.md  security_master_profiles_membership.ipynb
notebooks/data_notebooks/corpus_construction/: corpus_exploration_and_cleaning.ipynb
notebooks/data_notebooks/entity_resolution/: README.md  adjudication_multi_candidate.ipynb  security_master_profiles_membership.ipynb
notebooks/data_notebooks/firm_regressors/: firm_regressors.ipynb
notebooks/modeling_notebooks/coherence_measurement/: coherence_measurement.ipynb
notebooks/modeling_notebooks/regression/: regression.ipynb
sql/: 0001_trading_calendar.sql  0002_edgar_run_registry.sql  0002_ticker_cik_mapping.sql  0002_wayback_cik_candidates.sql  0003_edgar_run_registry.sql  0003_ticker_cik_evidence.sql  0004_security_master.sql  0004_ticker_cik_evidence.sql  0005_security_profile_history.sql  0005_ticker_cik_manual_adjudication.sql  0006_security_profile_history.sql  0006_snp_membership.sql  0006_ticker_cik_mapping.sql  0008_security_profile_history.sql  0010_annual_fundamentals.sql  0010_parsed_news_articles.sql  0011_news_sample_stats.sql  0012_lda_documents.sql  0013_lda_vocabulary.sql  0014_lda_document_terms.sql  0015_lda_run_registry.sql  0016_lda_article_topic_exposure.sql  0017_lda_topic_metadata.sql  0018_equity_regression_panel.sql  0019_fundamentals_manual_adjudication.sql  0020_return_forcasts.sql  README.md
src/: README.md
src/aws/: README.md
src/aws/ccnews_parser/: news_parser_config.py  news_parser_orchestrator.py  news_parser_utils.py  session_parser.py
src/aws/ccnews_sampler/: calendar_utils.py  ccnews_sampler_config.py  ccnews_sampler_types.py  data_maps.py  extract_sample.py  quota.py  reservoir_sampling.py  run_data.py  uniform_sampling.py
src/aws/loading/: load_articles_and_sample_stats.py  load_parsed_news_articles.py
src/aws/scripts/: news_queue.sh  s3_utils.sh  validation.sh
src/infra/logging/: infra_logger.py
src/infra/seeds/seed_evidence/: seed_evidence.py  seed_evidence_types.py
src/infra/utils/: id_namespace.py  requests_utils.py
src/lda/: README.md  lda_config.py  lda_input.py  lda_model.py  lda_output_parse.py  load_inference_topic_exposures.py
src/notebooks_utils/data_notebooks_utils/: general_data_notebooks_config.py  general_data_notebooks_utils.py
tests/test_aws/test_ccnews_parser/: test_news_parser_orchestrator.py  test_session_parser.py
tests/test_aws/test_ccnews_sampler/: test_calendar_utils.py  test_data_maps.py  test_extract_sample.py  test_quota.py  test_reservoir_sampling.py  test_uniform_sampling.py
tests/test_aws/test_scripts/: test_news_queue.bats  test_s3_utils.bats  test_validation.bats
tests/test_infra/test_seeds/: test_seed_snp_memberships.py  test_seed_trading_calendar.py
tests/test_infra/test_utils/: test_db_utils.py  test_requests_utils.py
tests/test_notebooks_utils/test_data_notebooks_utils/: test_adjudication_multi_candidate.py  test_corpus_exploration_and_cleaning.py  test_firm_regressors_utils.py  test_general_data_notebooks_utils.py  test_security_master_profiles_memberships.py
tests/test_notebooks_utils/test_modeling_notebooks_utils/: test_coherence_measurement_notebook_utils.py
(+72 files in other folders)
