# ─────────────────────────────────────────────────────────────────────────────
# Not a distributable package — just central config for tools used in CI
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "over-intra-news"
version = "0.0.0"
requires-python = ">=3.13"

dependencies = [
  "pandas",
  "psycopg2-binary",
  "exchange_calendars",
  "python-dotenv",
  "requests",
  "boto3",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "black",
  "pandas-stubs",
  "types-psycopg2",
  "types-requests",
  "boto3-stubs",
]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
disallow_untyped_defs = true
pretty = true
# Limit mypy to actual Python code so it doesn't roam:
files = ["infra", "aws/ccnews_sampler"]

[[tool.mypy.overrides]]
module = ["exchange_calendars.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["aws", "infra"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

# ─────────────────────────────────────────────────────────────────────────────
# Optional safety guard: prevent setuptools from accidentally discovering pkgs
# If someone runs `pip install .` by mistake, this stops package discovery.
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools]
packages = []
